started work with main document front page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html dir="ltr" lang="uk">
+<html dir="ltr" lang="uk" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Резерв+</title>
+    <meta property="og:title" content="Reserv+" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://yaoleksa.github.io/reserv-plus/" />
+    <meta property="og:image" content="./imgs/QrCode.png" />
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="shortcut icon" href="./imgs/QrCode.png" />
   </head>
   <body>
     <div id="root"></div>
