added project OpenGraph description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://yaoleksa.github.io/reserv-plus/" />
     <meta property="og:image" content="./imgs/QrCode.png" />
+    <meta property="og:description" content="This is an icon of my curiosity, whether it's difficult to trick the system" />
     <link rel="stylesheet" href="./style/index.css">
     <link rel="shortcut icon" href="./imgs/QrCode.png" />
   </head>
