have improved animation logic

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <body>
     <div id="root"></div>
   </body>
-  <script defer src="./dist/app.js"></script>
+  <script src="./dist/app.js"></script>
+  <script defer src="./dist/auxiliary.js"></script>
 </html>
