working with running string animation logic

--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     <div id="root"></div>
   </body>
   <script src="./dist/app.js"></script>
-  <script defer src="./dist/auxiliary.js"></script>
+  <script src="./dist/auxiliary.js"></script>
 </html>
